fix: margins and flex gap

--- a/style.css
+++ b/style.css
@@ -59,7 +59,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 50px;
     flex-direction: column;
     flex: 1;
 }
@@ -92,6 +91,9 @@ body {
  
 }
 
+#playagain {
+    margin: 50px;
+}
 .buttons {
     display: flex;
     gap: 30px;
